--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -2042,7 +2042,8 @@ ul li {
 .profile-text h6 {
     margin-top: -10px;
     margin-bottom: 20px;
-    color: #d3d3d3;
+    color: #ad1c1c;
+    font-size: 15px;
 }
 
 .profile-text h3 {
@@ -2052,6 +2053,7 @@ ul li {
 
 .profile-text h4 {
     color: #48cfad;
+    font-size: 57px;
 }
 
 profile-text p {
